# quel-talent-api

./: MANIFEST.in  pyproject.toml  readme.md
queltalentapi/: main.py
queltalentapi/components/: bootstrapper.py
queltalentapi/components/authorization/: abstract.py  auth0.py  noauth.py
queltalentapi/components/database/ram/: project.py  project_implementation.py
queltalentapi/components/event_bus/: logger.py
queltalentapi/components/http/: abstract.py  abstract_route.py  fastapi.py  user_claims.py
queltalentapi/domain/project/: domain_component.py  models.py  project_api.py  routes.py
queltalentapi/domain/project/database/: abstract.py  record.py
queltalentapi/domain/project/database/alembic/: implementation.py  model.py
queltalentapi/foundation/: abstract_domain_component.py  bootstrapper.py  domain_components_store.py
queltalentapi/foundation/authorization/: abstract.py
queltalentapi/foundation/event_bus/: abstract.py  type_enum.py
queltalentapi/foundation/http/: abstract.py  abstract_route.py  exception_handler.py  meta_route.py  route_details.py
queltalentapi/resources/: .env.example
